--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello
+<!DOCTYPE html>
+<html>
+<head>
+	<title>About me</title>
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="jumbotron">
+	Hello, and I welcome you to know more about myself. I will be updating this, so stay tuned
+</div>
+</body>
+</html>
