--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="navbar-collapse collapse"></div>
+<div class="navbar-collapse collapse"> Hello =)</div>
 <div class="jumbotron">
 	Hello, and I welcome you to know more about myself. I will be updating this, so stay tuned
 </div>
