--- a/index.html
+++ b/index.html
@@ -15,19 +15,36 @@
 
 </head>
 <body>
-<div class="navbar-collapse collapse" id="navbar-main">
-          <ul class="nav navbar-nav">
 
-            <li>
-              <a href="" >Personal Details</a>
-            </li>
-            <li  class="disabled">
-              <a href="">Projects</a>
+
+<div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="./index.html" class="navbar-brand">Varun</a>
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="projs">Projects <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="themes">
+                <li><a href="./bf.html">Brain Fcuk</a></li>
+                <li class="divider"></li>
+              </ul>
             </li>
           </ul>
 
 
         </div>
+      </div>
+    </div>
+
+
+
 <div style="height: 100%;">
 <div class="container" >
 
@@ -62,11 +79,6 @@
   </div>
 
 </div>
-
-
-
-
-
 
 
 
