--- a/bf.html
+++ b/bf.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Sample</title>
+	<title>BF Compiler and Converter</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./bs/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="./bs/css/bootstrap.min.css">
