Added a project agter converting from C to JS

--- a/bf.html
+++ b/bf.html
@@ -64,7 +64,7 @@
       </h5>
         ++++++++[>++++[>++>+++>+++>+<<<<-]>+>+>->>+[<]<-]>>.>---.+++++++..+++.>>.<-.<.+++.------.--------.>>+.>++.  : 106 characters
       <h5>
-        My code:
+        My generated code:
       </h5>
       ++++++++++[>+>+++>+++++++>++++++++>++++++++++>+++++++++++<<<<<<-]>>>++.>>+.+++++++..>+.<<<<++.>>+++++++.>>.+++.<.--------.<<<+.<.  : 129 characters
     </p>
