--- a/bf.html
+++ b/bf.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<link rel="shortcut icon" href="./bs/pic.ico">
 	<title>BF Compiler and Converter</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./bs/css/bootstrap.css">
@@ -13,10 +13,14 @@
         $("[rel='tooltip']").tooltip();
     });
 </script>
+<style type="text/css">
+</style>
 
 </head>
 <body>
+
 <div class="navbar navbar-default navbar-fixed-top">
+
       <div class="container">
         <div class="navbar-header">
           <a href="./index.html" class="navbar-brand">Varun</a>
