--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<link rel="shortcut icon" href="./bs/pic.ico">
 	<title>Identity</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="./bs/css/bootstrap.css">
@@ -73,9 +73,13 @@
     <p>
     	I am Varun Appaswami, studying Computer Science and Engineering at <a href="#" rel="tooltip" title="Madras Institute of Technology">MIT</a>
     </p>
+    <p>
+      Will be updated soon
+    </p>
   </div>
   <div class="tab-pane fade" id="profile">
     <p>Mail to varunappaswami@gmail.com</p>
+    <p> Will be updated soon </p>
   </div>
 
 </div>
