--- a/404.html
+++ b/404.html
@@ -2,24 +2,59 @@
 <html>
 <head>
 <link rel="shortcut icon" href="./bs/pic.ico">
-	<title>Oopsy!!!</title>
-	<style type="text/css"></style>
-	<style type="text/css">
-		.FLOATtxt {
-color: blue;
-text-shadow: 0 3px 0 #b2a98f,0 14px 10px rgba(0,0,0,0.15), 0 24px 2px rgba(0,0,0,0.1), 0 34px 30px rgba(0,0,0,0.1);
-font-size: 54px;
+	<title>Identity</title>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="./bs/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./bs/css/bootstrap.min.css">
+	<script type="text/javascript" src="./bs/js/bootstrap.min.js"></script>
+	<script type="text/javascript">
+    $(function () {
+        $("[rel='tooltip']").tooltip();
+    });
+</script>
+<style type="text/css">
+body{
+	background: #ffffff;
+	background-color: #ffffff;
 }
-	</style>
+	
+</style>
 </head>
 <body>
-<div style="width: 100%;height: 100%;">
-<img src="./bs/piccy.jpg"></div>
-<div class="FLOATtxt" style="position: absolute; right: 0; top: 0;">
-<br><br><br>
-OOPSY!!! The page which you are<br> searching for does not exist.
-<a href="./index.html"> Go Home </a>
-</div>
 
+<div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="./index.html" class="navbar-brand">Varun</a>
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="projs">Projects <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="themes">
+                <li><a href="./bf.html">Brain Fcuk</a></li>
+                <li class="divider"></li>
+              </ul>
+            </li>
+          </ul>
+
+        </div>
+      </div>
+    </div>
+    <br><br>
+<img src="./bs/piccy.jpg">
+
+<div class="jumbotron" style="color: #222222;position: absolute; right: 0; top: 0;background: #ffffff;"> 
+<br><br><br>
+
+<h1> OOPSY!!! A bad link!!!
+<br>
+<a href="./index.html"> Go Home </a></h1>
+ </div>
 </body>
 </html>
