--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="projs">Projects <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
-                <li><a href="./bf.html">Brain Fcuk</a></li>
+                <li><a href="http://a-varun.github.io/brain_fcuk.html">Brain Fcuk</a></li>
                 <li class="divider"></li>
               </ul>
             </li>
