--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <li><a href="http://a-varun.github.io/brain_fcuk/index.html">Brain Fcuk</a></li>
                 <li class="divider"></li>
+        	<li><a href="http://a-varun.github.io/2048_2pl/index.html">2048 Clone</a></li>
               </ul>
             </li>
           </ul>
