--- a/404.html
+++ b/404.html
@@ -40,6 +40,7 @@ body{
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <li><a href="./bf.html">Brain Fcuk</a></li>
                 <li class="divider"></li>
+                <li><a href="http://a-varun.github.io/2048_2pl/index.html">2048 Clone</a></li>
               </ul>
             </li>
           </ul>
